--- a/cycCashTurn.css
+++ b/cycCashTurn.css
@@ -1,5 +1,5 @@
 #page {
-    width: 1200px;
+    width: 1120px;
     margin-left: auto;
     margin-right: auto;
     background-color: rgb(253, 253, 253);
@@ -316,7 +316,7 @@ caption {
 
 }
 
-tr td:first-child:not(:empty):after {
+.colonTb tr td:first-child:not(:empty):after {
     content: ":";
 }
 
@@ -359,3 +359,64 @@ tr.noAfter td:first-child:after {
 /*tr.noBefore td:first-child:before {*/
 /*    content: none;*/
 /*}*/
+
+#ratCircleTable td.card {
+    position: relative;
+    border: 1px solid black;
+    border-radius: 4px;
+    top: 0px;
+    left: 0px;
+    color: black;
+    height: 88px;
+    width: 20px !important;
+    font-size: 14px;
+    text-align: center;
+    box-shadow: .2px .2px .2px .2px #4E342E;
+    margin: auto;
+    text-align: center !important;
+    content: none !important;
+}
+
+#ratCircleTable td {
+    content: none !important;
+}
+
+#ratCircleTable td.empty {
+    border: none;
+}
+
+#ratCircleTable .opportunity {
+    background-color: rgb(158, 205, 125)
+}
+
+#ratCircleTable .extraExpense {
+    background-color: rgb(220, 132, 171)
+}
+
+#ratCircleTable .market {
+    background-color: rgb(101, 152, 176)
+}
+
+#ratCircleTable .payday {
+    background-color: rgb(253, 132, 75)
+}
+
+#ratCircleTable .charity {
+    background-color: rgb(253, 177, 113)
+}
+
+#ratCircleTable .child {
+    background-color: rgb(109, 85, 125)
+}
+
+#ratCircleTable .unemployed {
+    background-color: rgb(201, 192, 218)
+}
+
+.dice {
+    width: 360px;
+    position: relative;
+    left:90px;
+    bottom: 375px;
+
+}
